[tool.poetry]
name = "sea-temperature"
version = "0.1.0"
description = "A personal project to visualise sea temperature"
authors = ["Sai Ma"]
package-mode = false

[tool.poetry.dependencies]
python = "~=3.12"
pandas = "^2.2.3"
numpy = "^2.1.0"
matplotlib = "^3.9.0"
scipy = "^1.14.0"
scikit-learn = "^1.5.0"
fastapi = "^0.129.0"
uvicorn = "^0.40.0"
requests = "^2.32.5"
jinja2 = "^3.1.6"
python-dotenv = "^1.2.1"
copernicusmarine = "^2.3.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
jupyterlab = "^4.3.0"
notebook = "^7.2.2"
jupyterlab-widgets = "^3.0.13"
pylint = "^4.0.4"
black = "^24.0.0"
isort = "^5.13.0"

[tool.poetry.group.testing.dependencies]
pytest = "^8.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# ------------------------
# Tool configuration
# ------------------------

[tool.black]
line-length = 88
exclude = '''
/(
    \.venv
  | \.deprecated
  | \.git
)/
'''

[tool.isort]
profile = "black"
skip = [".venv", ".deprecated"]

[tool.pylint.MASTER]
ignore = [".venv", ".deprecated"]

[tool.pylint.'MESSAGES CONTROL']
disable = [
  "missing-module-docstring",
  "missing-function-docstring",
  "missing-class-docstring",
]